# AIE6

./: .gitignore  Inference_Optimization_Through_Quantization_Strategies_Assignment.ipynb
00_AIM_Quicklinks/: README.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb
02_Embeddings_and_RAG/aimakerspace/: pdf_utils.py  vectordatabase.py
02_Embeddings_and_RAG/aimakerspace/openai_utils/: embedding.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/content/data/6bf3ce31/: AI_Announcement_Llama3.txt  Llama3_LinkedIn_Post_Outline.txt
06_Multi_Agent_with_LangGraph/content/data/de9759d5/: linear_regression_linkedin_post_outline.txt  linear_regression_outline.txt
06_Multi_Agent_with_LangGraph/content/data/df43ab77/: AI_Research_Announcement.txt  AI_Research_Announcement_Outline.txt
06_Multi_Agent_with_LangGraph/content/data/ff71273f/: linear_regression_linkedin_post_outline.txt
07_Synthetic_Data_Generation_and_LangSmith/: README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  README.md
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  README.md
10_Finetuning_Reasoning_Model/: AI_Makerspace_Unsloth_GRPO_Training.ipynb
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb
12_OpenAI_Agents_SDK/flowchart_files/: research_manager_flowchart.md  research_process_overview.md
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  README.md  pyproject.toml
14_Open_DeepResearch/: open-deep-research.ipynb
15_Open_Source_Endpoints/: Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb
15_Open_Source_Endpoints/Application_Start/: app.py  solution_app.py
Midterm_Challenge/: Cybersecurity_Golden_Data_Set.ipynb  Dockerfile  README.md  SAMD_Regulatory_Assistance_Bot.ipynb  chainlit.md  chainlit.yaml  fda-cybersecurity-ragas-eval.py  fda-regulatory-ragas-eval.py  fda_cybersecurity_detailed_evaluation.csv  fda_cybersecurity_ragas_results.csv  fine_tuning_cybersecurity_embedding_model.ipynb  main.py  pyproject.toml  requirements.txt  s3_utils.py  test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
Midterm_Challenge/.chainlit/: config.toml
Midterm_Challenge/data/: cybersecurity_1.html  cybersecurity_2.html  cybersecurity_3.html  cybersecurity_4.html
