[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "pymupdf>=1.25.5",
    "pyppeteer>=2.0.0",
    "qdrant-client>=1.14.2",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
]
