[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pymupdf>=1.25.5",
    "pyppeteer>=2.0.0",
    "qdrant-client>=1.14.2",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "uuid>=1.30",
]
