[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.26.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.38.14",
    "chainlit>=2.5.5",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.16",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.3",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "nltk==3.9.1",
    "pyarrow>=20.0.0",
    "pymupdf>=1.25.5",
    "pyppeteer>=2.0.0",
    "python-pptx==1.0.2",
    "qdrant-client>=1.14.2",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "uuid>=1.30",
    "wandb>=0.19.11",
    "websockets>=10.4",
]
